# HiddenSurfaceRemover

./: CMakeLists.txt  README.md
include/: ActiveEdge.h  ActivePolygon.h  ActiveSegment.h  Edge.h  ImageLabel.h  ImageWidget.h  Mesh.h  Model.h  NaiveHierarchicalZBuffer.h  NaiveZBuffer.h  Octree.h  OctreeHierarchicalZBuffer.h  Pixel.h  Polygon.h  QuadTree.h  QuadTreeNode.h  RenderWidget.h  Renderer.h  ScanlineZBuffer.h  Segment.h  Vertex.h  ZBuffer.h
src/: ActiveEdge.cpp  ActivePolygon.cpp  ActiveSegment.cpp  Edge.cpp  ImageLabel.cpp  ImageWidget.cpp  Mesh.cpp  Model.cpp  NaiveHierarchicalZBuffer.cpp  NaiveZBuffer.cpp  Octree.cpp  OctreeHierarchicalZBuffer.cpp  Pixel.cpp  Polygon.cpp  QuadTree.cpp  QuadTreeNode.cpp  RenderWidget.cpp  Renderer.cpp  ScanlineZBuffer.cpp  Segment.cpp  Vertex.cpp  ZBuffer.cpp  main.cpp
